Add Heroku and GitHub deployment configuration
- Add Procfile, runtime.txt, app.json for Heroku
- Add GitHub Actions workflows for CI/CD
- Update main.py to serve frontend in production
- Add comprehensive deployment documentation
- Add quick deploy script
- Configure buildpacks for Node.js and Python

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,5 +16,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 }
