--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ openai==1.3.7
 exa-py>=2.0.0
 python-dotenv==1.0.0
 pytest==7.4.3
-httpx==0.25.2
+httpx>=0.25.0
 pytest-mock==3.15.1
 mongomock==4.1.2
 python-multipart==0.0.18
