--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,14 @@ fastapi==0.104.1
 uvicorn==0.24.0
 pydantic==2.5.0
 pymongo==4.6.0
-pandas==2.1.4
-scikit-learn==1.3.2
-openai>=1.12.0
+pandas==2.2.0
+numpy>=1.26.0,<2.0.0
+scikit-learn==1.4.0
+openai==1.10.0
 exa-py>=2.0.0
 python-dotenv==1.0.0
 pytest==7.4.3
+httpx>=0.26.0
 pytest-mock==3.15.1
 mongomock==4.1.2
 python-multipart==0.0.18
