--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ pymongo==4.6.0
 pandas==2.2.0
 numpy>=1.26.0,<2.0.0
 scikit-learn==1.4.0
-openai==1.10.0
+openai>=1.54.0
 exa-py>=2.0.0
 python-dotenv==1.0.0
 pytest==7.4.3
