--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-pydantic==2.5.0
-pymongo==4.6.0
-pandas==2.2.0
-numpy>=1.26.0,<2.0.0
-scikit-learn==1.4.0
-openai>=1.54.0
-exa-py>=2.0.0
-python-dotenv==1.0.0
-pytest==7.4.3
-pytest-mock==3.15.1
-mongomock==4.1.2
-python-multipart==0.0.18
-email-validator==2.3.0
-requests==2.31.0
+fastapi==0.115.0
+uvicorn==0.32.0
+pydantic==2.10.0
+pymongo==4.10.1
+pandas==2.2.3
+numpy==2.1.0
+scikit-learn==1.5.2
+openai==1.54.0
+exa-py==1.1.2
+python-dotenv==1.0.1
+pytest==8.3.0
+pytest-mock==3.14.0
+mongomock==4.2.0
+python-multipart==0.0.20
+email-validator==2.2.0
+requests==2.32.3
